# abracadabra_sense_arduino

./: .gitignore  CLAUDE.md  README.md  arm_circle_motion.csv  gesture_visualizer.html  imu_data_cropper.html  platformio.ini
.cursor/rules/: PlatformIO.mdc
cursor_rules/: PlatformIO.md
gesture-server/: Makefile  README.md  pyproject.toml  run_server.py
gesture-server/app/: augmentation.py  main.py
gesture-server/app/static/data/: augmentation_19086971.json  augmentation_31908648.json  augmentation_33059797.json  augmentation_35610765.json  augmentation_38668125.json  augmentation_48172183.json  augmentation_48595409.json  augmentation_64416371.json  augmentation_65088942.json  augmentation_68195546.json  augmentation_75562869.json  augmentation_76010340.json  augmentation_83373519.json  augmentation_93274951.json
gesture-server/app/templates/: augmentation_form.html  combined_form.html  upload_form.html  visualization.html
src/: abracadabra_sense_arduino.code-workspace  main.cpp
src/communication/: json_serializer.h
src/config/: config.h
src/display/: oled_display.h
src/sensors/: imu.h
src/utils/: battery_monitor.h  led_manager.h
