[tool.poetry]
name = "gesture-server"
version = "0.1.0"
description = ""
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.13.3"
fastapi = "0.115.12"
uvicorn = {extras = ["standard"], version = "0.34.0"}

[tool.poetry.group.dev.dependencies]
black = "23.10.0"

[build-system]
requires = ["poetry-core>=2.1.2"]
build-backend = "poetry.core.masonry.api"
